demowebapp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demodeploy
  name: demodeploy
spec:
  clusterIP: 10.152.183.2
  clusterIPs:
    - 10.152.183.2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: demodeploy
  sessionAffinity: None
  type: ClusterIP
